55959: [T][I1][Extra] - Issues after testing on iPhone SE under Safari browser

--- a/app/design/frontend/Fecon/theme/web/css/source/_product_page.less
+++ b/app/design/frontend/Fecon/theme/web/css/source/_product_page.less
@@ -55,6 +55,7 @@ body.catalog-product-view {
                                 }
                             }
                             .rating-summary {
+                                margin-bottom: 15px;
                                 margin-right: 0px;
                                 width: 160px;
                                 .rating-result {
