--- a/app/design/frontend/Fecon/theme/web/css/source/responsive/_header.less
+++ b/app/design/frontend/Fecon/theme/web/css/source/responsive/_header.less
@@ -297,6 +297,9 @@
                                 }
                             }
                             .header.links {
+                                li.greet.welcome {
+                                    display: none !important;
+                                }
                                 li {
                                     a {
                                         color: @color-white !important;
